--- a/COLISEODEPORTIVO/src/main/resources/application.properties
+++ b/COLISEODEPORTIVO/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/coliseodeportivodb
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=260599miguel
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 server.port=8080
